# phy982-hw

./: .gitignore  Common.hs  Makefile  README.md  common.py  common.r  common.tex  hw1.hs  hw1.r  hw1.tex  hw1.txt  hw2-expt-data.py  hw2.py  hw2.r  hw2.tex  hw2_data.py  hw3.tex  hw3.txt  phy982.cabal
tools/: fresco  sfresco  sigilz.shar
