name:                phy982
version:             0
synopsis:            .
description:         .
license:             PublicDomain
maintainer:          .
category:            .
build-type:          Simple
cabal-version:       >=1.10

executable phy982-hw1
  main-is:             hw1.hs
  other-modules:       Common
  other-extensions:    BangPatterns
  build-depends:       base        >=4.5  && <5
                       -- conservative estimates:
                     , ad          >=4.2  && <4.3
                     , hmatrix     >=0.16 && <0.17
                     , hmatrix-gsl >=0.16 && <0.17
                     , levmar      >=1.2  && <1.3
  extra-libraries:     gsl gslcblas
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-name-shadowing
